Kill a warning about uninitialized 'filename' (if argc == 0)

http://bugzilla.gnome.org/show_bug.cgi?id=584849